--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ quarkus.datasource.username = postgres
 quarkus.datasource.password = mumu
 quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:7117/yukchat
 
-# quarkus.hibernate-orm.database.generation= drop-and-create
-quarkus.hibernate-orm.database.generation=none
+quarkus.hibernate-orm.database.generation= drop-and-create
+# quarkus.hibernate-orm.database.generation=none
 
 
