added feature send email and configuration email

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
       <artifactId>jasperreports-fonts</artifactId>
       <version>6.20.0</version>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-mailer</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-qute</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
