added scheduler and configuration scheduler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,9 @@ quarkus.datasource.password = mumu
 quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:7117/yukchat
 
 # quarkus.hibernate-orm.database.generation= drop-and-create
-quarkus.hibernate-orm.database.generation=update
+quarkus.hibernate-orm.database.generation=none
+
+quarkus.scheduler.cron-type = unix
 
 quarkus.mailer.auth-methods=DIGEST-MD5 CRAM-SHA256 CRAM-SHA1 CRAM-MD5 PLAIN LOGIN
 quarkus.mailer.from=mymuhyidev@gmail.com
