--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,12 +12,12 @@ quarkus.hibernate-orm.database.generation=none
 quarkus.scheduler.cron-type = unix
 
 quarkus.mailer.auth-methods=DIGEST-MD5 CRAM-SHA256 CRAM-SHA1 CRAM-MD5 PLAIN LOGIN
-quarkus.mailer.from=mymuhyidev@gmail.com
+quarkus.mailer.from=
 quarkus.mailer.host=smtp.gmail.com
 quarkus.mailer.port=587
 quarkus.mailer.start-tls=REQUIRED
-quarkus.mailer.username=mymuhyidev@gmail.com
-quarkus.mailer.password=uqzdwxgmrjkeisku
+quarkus.mailer.username=
+quarkus.mailer.password=
 
 quarkus.mailer.mock=false # In dev mode, prevent from using the mock SMTP server
 
